objects/ASI_FOC_Free_Goods_Request__c.object
<CustomObject>
    <description>used by PR China FOC</description>
    <fields>
        <fullName>ASI_CRM_AB_Policy_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Policy Number</label>
        <referenceTo>ASI_CRM_Anti_Bribery__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AG_Code_Number__c</fullName>
        <label>AG Code Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AP_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <label>A&amp;P Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Benchmark_ROI_Percent__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_SG_Target_Benchmark__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benchmark ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Not_Applicable_ForCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable For Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Not_Applicable_ForEventPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable For Event PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Outlet_Remarks__c</fullName>
        <label>Outlet Remarks</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_PO_Final_Amount__c</fullName>
        <formula>ASI_CRM_CN_FG_Trade_A_P_PO__r.ASI_CRM_CN_Total_Contract_Amount_RMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Final Amount(Trade A&amp;P)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_PO_Remaining_Amount__c</fullName>
        <label>PO Remaining Amount(Trade A&amp;P)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Sales_Team__c</fullName>
        <formula>TEXT(Owner:User.ASI_CRM_Sales_Team__c)</formula>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Supplier_Email__c</fullName>
        <label>Supplier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Total_Logistics_Amount__c</fullName>
        <label>Total Logistics Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_CN_FG_Logistic_Amount__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Trade_A_P_PO_Number__c</fullName>
        <formula>ASI_CRM_CN_FG_Trade_A_P_PO__r.ASI_CRM_CN_PO_No__c</formula>
        <label>Trade A&amp;P PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Trade_A_P_PO_Status__c</fullName>
        <formula>TEXT(ASI_CRM_CN_FG_Trade_A_P_PO__r.ASI_CRM_CN_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade A&amp;P Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_FG_Trade_A_P_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade A&amp;P Contract Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>ASI_CRM_CN</value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_FOC_Request_Type__c</field>
                <operation>equals</operation>
                <value>Trade A&amp;P</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (Trade A&amp;P PO)</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Purpose_Description__c</fullName>
        <defaultValue>$Label.ASI_CRM_CN_FG_PurposeDescription1 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription2 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription3 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription4 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription5 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription6 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription7 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription8 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription9 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription10 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription11 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription12 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription13 &amp;BR()&amp;
$Label.ASI_CRM_CN_FG_PurposeDescription14</defaultValue>
        <label>Purpose Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eMail_Subject__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_Free_Goods_Request_Read_Only&quot;) || CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_Free_Goods_Request&quot;) || CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_Request_and_Items_Read_Only&quot;), &quot;free goods&quot;, IF(CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_POSM&quot;) || CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_POSM_Read_Only&quot;), &quot;POP/POSM&quot;, &quot;&quot;))</formula>
        <label>eMail Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_No_Original__c</fullName>
        <label>Contract No. (Original)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG FOC, SG POSM</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.ASI_CRM_CN_Outlet_WS__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.ASI_CRM_Outlet__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>SG FOC, SG POSM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contracted_ROI_Percent__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_ROIFx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_CN_FPtoCU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_To__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Tel__c</fullName>
        <label>Delivery Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2 AND 3 AND 5) OR 4)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Supplier, Outlet (TW)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>Account.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>TW Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (Delivery To)</relationshipLabel>
        <relationshipName>Free_Goods_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Department__c</fullName>
        <formula>ASI_CRM_Requester__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Amount_Number__c</fullName>
        <formula>ASI_CRM_FOC_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC Amount (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Amount__c</fullName>
        <label>FOC Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_TW_Amount__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Amount_w_o_A_D__c</fullName>
        <label>FOC Amount (A&amp;P)</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_TW_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_A_D_or_A_P__c</field>
            <operation>notEqual</operation>
            <value>A&amp;D</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Nature__c</fullName>
        <label>FOC Nature</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Has_Cancel_Qty__c</fullName>
        <formula>ASI_FOC_SYS_Total_Cancel_Item__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Cancel Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_SO_Number__c</fullName>
        <label>JDE SO Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KH_FOC_without_Contract__c</fullName>
        <formula>ASI_CRM_Contract__c = null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC without Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KH_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KH_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_KH_Total_Price__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Display_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked, system will display Min SP in the FOC Claim Report</inlineHelpText>
        <label>Display Price?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Event_Period__c</fullName>
        <label>Event Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Exceed_AP_Entitled_Amt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceed A&amp;P Entitled Amount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_JDE_SO_Type__c</fullName>
        <label>JDE SO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SY</fullName>
                    <label>SY-Barter Trade GST</label>
                </value>
                <value>
                    <fullName>SN</fullName>
                    <label>SN-Barter Trade Non-GST</label>
                </value>
                <value>
                    <fullName>J5</fullName>
                    <label>J5-Free Issue</label>
                </value>
                <value>
                    <fullName>SG</fullName>
                    <label>SG-Free Issue</label>
                </value>
                <value>
                    <fullName>P5</fullName>
                    <label>P5-Free Issue</label>
                </value>
                <value>
                    <fullName>K5</fullName>
                    <label>K5-Free Issue</label>
                </value>
                <value>
                    <fullName>M5</fullName>
                    <label>M5-Free Issue</label>
                </value>
                <value>
                    <fullName>I5</fullName>
                    <label>I5-Free Issue</label>
                </value>
                <value>
                    <fullName>FY</fullName>
                    <label>Free Issues - FY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <formula>IF(
MONTH(ASI_FOC_Date_of_Delivery__c) &lt; 10, 
&apos;0&apos; + TEXT(MONTH(ASI_FOC_Date_of_Delivery__c)), 
TEXT(MONTH(ASI_FOC_Date_of_Delivery__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Detail_Line__c</fullName>
        <label>No. of Detail Line</label>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Address__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_JP_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Invoice_Number__c</fullName>
        <label>Outlet Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3) OR (4 AND 5) OR (6 AND 7)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG FOC, SG POSM</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (SG)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>SG FOC, SG POSM, MY FOC Free Goods Request, CN POSM, CN FOC Free Goods Request</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY FOC Free Goods Request</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (MY), Wholesaler (MY), Potential Outlet (MY)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN POSM, CN FOC Free Goods Request</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (CN), Outlet (CN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment No</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Payment__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Payment, TW Payment Read-Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purpose__c</fullName>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receiver__c</fullName>
        <label>Receiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Record_Type_Developer_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reference_No__c</fullName>
        <label>Reference No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_Delivery_Date__c</fullName>
        <label>Confirmed Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_Number__c</fullName>
        <label>Request Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Requester_Contact_No__c</fullName>
        <formula>ASI_CRM_Requester__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Contact No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Revised_ROI_Percent__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_ROI_Percent_Revised__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Delivery_Charge__c</fullName>
        <label>Delivery Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Delivery_Instructions__c</fullName>
        <label>Delivery Instructions(For Logistics)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOC Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC_Type__c</fullName>
        <label>FOC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Incentive</fullName>
                </value>
                <value>
                    <fullName>Management Incentives</fullName>
                </value>
                <value>
                    <fullName>Contract Sponsorship/Target Incentive</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Signages / Advertising Spot</fullName>
                </value>
                <value>
                    <fullName>Anniversary</fullName>
                </value>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>STK2</fullName>
                    <label>A&amp;D - Stock Offer 2 - STK2</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>A&amp;P - Sampling/Demo to End Consumer – 0003</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>Structure Cost - Gift for staff - Xmas / CNY-0008</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>A&amp;P - Gifts for Trade /Business Associates - 0009</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>A&amp;D - Contract Margin in kind-0020</label>
                </value>
                <value>
                    <fullName>0021</fullName>
                    <label>A&amp;D - Sponsorships - contracting of outlets only-0021</label>
                </value>
                <value>
                    <fullName>0022</fullName>
                    <label>A&amp;D - Management Incentives - Fixed-0022</label>
                </value>
                <value>
                    <fullName>0023</fullName>
                    <label>A&amp;D - Management Incentives - Sales / Staff-0023</label>
                </value>
                <value>
                    <fullName>0025</fullName>
                    <label>A&amp;D - Adhoc Sponsorship/Promotion - 0025</label>
                </value>
                <value>
                    <fullName>0026</fullName>
                    <label>A&amp;P - Company / Pernod Ricard Functions - 0026</label>
                </value>
                <value>
                    <fullName>0027</fullName>
                    <label>A&amp;P - Contest / Prizes / Donations - 0027</label>
                </value>
                <value>
                    <fullName>0028</fullName>
                    <label>COGS - GWP (Premium Stock)-0028</label>
                </value>
                <value>
                    <fullName>0029</fullName>
                    <label>A&amp;P - Direct Marketing - 0029</label>
                </value>
                <value>
                    <fullName>0030</fullName>
                    <label>A&amp;D - 7th Moon Promotion-0030</label>
                </value>
                <value>
                    <fullName>0031</fullName>
                    <label>A&amp;D - 7th Moon Functions-0031</label>
                </value>
                <value>
                    <fullName>0032</fullName>
                    <label>A&amp;P - Signages New - TOT-0032</label>
                </value>
                <value>
                    <fullName>0033</fullName>
                    <label>A&amp;P - Signages Recurrect - TOT-0033</label>
                </value>
                <value>
                    <fullName>0034</fullName>
                    <label>A&amp;P - Signages - MOT - 0034</label>
                </value>
                <value>
                    <fullName>0035</fullName>
                    <label>A&amp;P - Sampling - 0035</label>
                </value>
                <value>
                    <fullName>0036</fullName>
                    <label>A&amp;P - Commando Activities - 0036</label>
                </value>
                <value>
                    <fullName>0037</fullName>
                    <label>A&amp;P - Opening / Anniversary - 0037</label>
                </value>
                <value>
                    <fullName>0038</fullName>
                    <label>A&amp;P - UCA-GMA Purchases - 0038</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Has_Advertising_Spot__c</fullName>
        <label>Has Advertising Spot</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_SG_FOC_Type__c</field>
            <operation>equals</operation>
            <value>Advertising Spot</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Has_Signages__c</fullName>
        <label>Has Signages</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_SG_FOC_Type__c</field>
            <operation>equals</operation>
            <value>Signages New - TOT,  Signages New - MOT</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Month__c</fullName>
        <label>Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sys_Changes__c</fullName>
        <label>Sys Changes</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_SG_CRM_SYS_Changed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Benchmark_Threshold__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_SG_Target_Benchmark_Threshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Benchmark Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Approved_Time__c</fullName>
        <label>SYS Approved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Key_Year_Month__c</fullName>
        <formula>ASI_CRM_SG_Year__c + &apos;_&apos; +  ASI_CRM_SG_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Key Year_Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Shipment_Date__c</fullName>
        <formula>ASI_FOC_SYS_Approved_Date__c + if( VALUE( MID( TEXT( ASI_CRM_SYS_Approved_Time__c + 8/24 ), 12, 2) ) &gt;= 16, 2, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sampling_Approval_Level__c</fullName>
        <label>Sampling Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ship_To_Address__c</fullName>
        <formula>ASI_CRM_Ship_To__r.ASI_CRM_JP_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
</CustomObject>